# unitree_go1_robot_infra

./: base.py  test.py
python_wrapper/: base.py  initial_con.sh  reset_eth.sh  tmp
python_wrapper/custom_agent/: CMakeLists.txt
python_wrapper/custom_agent/code/: learning.cpp
python_wrapper/custom_agent/include/unitree_legged_sdk/: loop.h
python_wrapper/lib/compile_env/: setup.py
